--- a/Trabajo_2/Trabajo_2.vcxproj.filters
+++ b/Trabajo_2/Trabajo_2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="binar_executer.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
